--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -6,7 +6,7 @@
 		"dockerfile": "Dockerfile",
 		// Update 'VARIANT' to pick an Ubuntu version: hirsute, focal, bionic
 		// Use hirsute or bionic on local arm64/Apple Silicon.
-		"args": { "VARIANT": "hirsute" }
+		"args": { "VARIANT": "focal" }
 	},
 
 	// Set *default* container specific settings.json values on container create.
@@ -25,14 +25,25 @@
 	// Comment out connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
 	"remoteUser": "vscode",
 	"features": {
+		"docker-in-docker": "latest",
+		"docker-from-docker": "latest",
+		"kubectl-helm-minikube": "latest",
+		"terraform": "latest",
 		"git": "latest",
 		"git-lfs": "latest",
 		"github-cli": "latest",
+		"azure-cli": "latest",
 		"sshd": "latest",
 		"desktop-lite": "latest",
+		"homebrew": "latest",
 		"node": "lts",
 		"python": "latest",
+		"golang": "latest",
 		"java": "lts",
+		"maven": "latest",
+		"gradle": "latest",
+		"ruby": "latest",
+		"rust": "latest",
 		"powershell": "latest"
 	}
 }
